--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "heroicons": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-js-stickynav": "^1.0.2",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
+    "styled-jsx": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
