--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "styled-jsx": "^5.0.0",
+    "swiper": "^8.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
